# residential-administrator

./: .env.example  Makefile  pyproject.toml
src/core/Enums/: role_type.py
src/core/models/: guard.py  resident.py  residential_unit.py  visitor.py
